# PEPS

./: .gitignore  CMakeLists.txt  README.md
docs/: API_IMPROVEMENT_SUGGESTIONS.md  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  build_docs.sh  mainpage.md
docs/design/: bmps_storage_convention.md
docs/dev/: API_IMPROVEMENT_SUGGESTIONS.md  CODE_REVIEW_FINDINGS.md  LEGACY_CLEANUP_ANALYSIS.md  LEGACY_MIGRATION_PLAN.md  MATH_PRINCIPLES_EXACT_SUMMATION.md  MISSING_SGD_VARIANTS.md  MONTE_CARLO_PEPS_API_REFACTOR_PROPOSAL.md  MONTE_CARLO_TESTING_BEST_PRACTICES.md  MPI_SYNCHRONIZATION_RESPONSIBILITY_SEPARATION_CN.md  OPTIMIZER_PARAMS_REFACTOR_PROPOSAL.md  OPTIMIZER_TESTING_STRATEGY.md  PROJECT_ARCHITECTURE_OVERVIEW_CN.md  README.md  TEST_PLAN.md  index.md  rfc_acceptance_rate_consistency_check.md
docs/plans/: 2026-04-18-heisenberg-sr-minsr-state-summary.md
docs/tutorial/: MIGRATION_SUMMARY.md  MONTE_CARLO_PEPS_API_GUIDE.md  OPTIMIZER_GUIDE.md  TOP_LEVEL_APIs.md  VMCPEPS_OPTIMIZER_EXECUTOR_GUIDE.md  VMC_DATA_PERSISTENCE_GUIDE.md
docs/tutorial_cn/: CUSTOM_ENERGY_SOLVER_GUIDE.md  MODEL_ENERGY_SOLVER_GUIDE.md  MONTE_CARLO_UPDATER_GUIDE.md  MONTE_CARLO_UPDATER_PXP_CUSTOM_BASICS.md  OPTIMIZER_GUIDE.md  RECOMMENDED_WORKFLOW.md  TOP_LEVEL_APIs.md  VMCPEPS_OPTIMIZER_EXECUTOR_GUIDE.md
docs/tutorials/: optimizer_guide.md
docs/tutorials_cn/: optimizer_guide.md  vmcpeps_optimizer_guide.md
docs/user/: README.md
examples/: CMakeLists.txt  README.md  migration_example.cpp  transverse_field_ising_mc_measure.cpp  transverse_field_ising_simple_update.cpp  transverse_field_ising_vmc_optimize.cpp  vmc_executor_exact_summation_example.cpp
tests/: CMakeLists.txt  parse_params.h  test_mpi_env.h  utilities.h
tests/Integration_tests/: test_square_heisenberg.cpp  test_square_j1_j2_xxz.cpp  test_square_j1j2_xxz_legacy_vmcpeps.cpp  test_triangle_heisenberg.cpp
tests/integration_tests/: integration_test_framework.h  test_square_heisenberg.cpp  test_square_heisenberg_obc.cpp  test_square_heisenberg_pbc.cpp  test_square_j1j2_xxz.cpp  test_square_j1j2_xxz_obc.cpp  test_square_j1j2_xxz_pbc.cpp  test_square_nn_spinless_free_fermion.cpp  test_square_tfim_pbc_trg.cpp  test_square_tj_model.cpp  test_triangle_heisenberg.cpp  test_triangle_j1j2_heisenberg.cpp
tests/package_consumer/: CMakeLists.txt  smoke.cc  verify_install.cmake
tests/slow_tests/: test_boson_mc_peps_measure.cpp  test_fermion_mc_peps_measure.cpp  test_fermion_mc_updater_large_size.cpp
tests/test_1d_tn/: test_bmps.cpp
tests/test_2d_tn/: test_arnoldi.cpp  test_bmps_contractor.cpp  test_configuration.cpp  test_duomatrix.cpp  test_peps.cpp  test_split_index_tps.cpp  test_split_index_tps_mpi.cpp  test_ten_matrix.cpp  test_tensornetwork2d.cpp  test_tps.cpp  test_trg_contractor.cpp  test_trg_pbc_benchmark.cpp
tests/test_algorithm/: test_api_smoke.cpp  test_boson_mc_sr_golden.cpp  test_boson_mc_sr_golden_mpi.cpp  test_boson_simple_update.cpp  test_exact_sum_optimization.cpp  test_exact_summation_evaluator.cpp  test_exact_summation_measurer.cpp  test_fermion_mc_measure.cpp  test_fermion_mc_sr_golden.cpp  test_fermion_mc_sr_golden_mpi.cpp  test_fermion_simple_and_update.cpp  test_fermion_simple_update.cpp  test_loop_update.cpp  test_loop_update_complex.cpp  test_loop_update_double.cpp  test_loop_update_observability.cpp  test_mc_energy_grad_evaluator.cpp  test_mc_energy_grad_evaluator_smoke.cpp  test_mc_energy_grad_evaluator_spinless_fermion_2x2.cpp  test_mc_ising_trg_pbc.cpp  test_mc_peps_measure.cpp  test_mc_peps_measure_complex.cpp  test_mc_peps_measure_double.cpp  test_mc_updater_trg_smoke.cpp  test_mcpeps_measurer_config_rescue_wiring_death_mpi.cpp  test_monte_carlo_engine.cpp  test_optimizer.cpp  test_optimizer_minsr_mc_heisenberg.cpp  test_params.json  test_simple_update.cpp  test_simple_update_advanced_stop.cpp  test_simple_update_complex.cpp  test_simple_update_double.cpp  test_simple_update_observability.cpp  test_square_heisenberg.cpp  test_sr_vs_minsr_equivalence.cpp  test_vmc_peps.cpp  test_vmc_peps_complex.cpp  test_vmc_peps_double.cpp  test_vmc_peps_optimizer.cpp
tests/test_algorithm_boson/: test_boson_mc_peps_measure.cpp  test_boson_simple_update.cpp  test_loop_update.cpp  test_mc_peps_measure.cpp  test_optimizer.cpp  test_simple_update.cpp  test_square_heisenberg.cpp  test_vmc_peps.cpp  test_vmc_peps_optimizer.cpp
tests/test_algorithm_fermion/: test_exact_sum_optimization.cpp  test_fermion_exact_optimization.cpp  test_fermion_mc_measure.cpp  test_fermion_mc_update.cpp  test_fermion_mc_updater.cpp  test_fermion_simple_and_loop_update.cpp  test_fermion_simple_and_update.cpp  test_fermion_vmc_peps.cpp  test_params.json  test_square_nn_spinless_free_fermion.cpp
tests/test_data/: README.md  SIMPLE_UPDATE_DATA_SPEC.md  ipeps_tJ_ta_doping0.125.qlten  ipeps_tJ_tb_doping0.125.qlten
tests/test_deprecated/: README.md  test_loop_update_deprecated.cpp
tests/test_model_solvers/: test_hubbard_u1u1_updater.cpp  test_square_xxz_measurer.cpp  test_tJ_model_solver.cpp
tests/test_monte_carlo_tools/: test_mc_updater_conservation.cpp  test_non_detailed_balance_mcmc.cpp  test_statistics.cpp  test_statistics_mpi.cpp  test_suwa_todo_update.cpp
tests/test_optimizer/: test_auto_step_selector_policy.cpp  test_fermion_exact_optimizer_integration_golden.cpp  test_lr_schedulers.cpp  test_optimizer.cpp  test_optimizer_adagrad_exact_sum.cpp  test_optimizer_adagrad_exact_sum_tfim_pbc_trg.cpp  test_optimizer_adam_exact_sum.cpp  test_optimizer_gradient_preprocessing.cpp  test_optimizer_lbfgs_exact_sum.cpp  test_optimizer_lbfgs_mc_regression.cpp  test_optimizer_lbfgs_recovery_policy.cpp  test_optimizer_params.cpp  test_optimizer_sgd_exact_sum.cpp  test_spike_detection.cpp  test_tfim_pbc_trg_exact_sum.cpp
tests/test_utility/: my_vector_matrix.h  test_conjugate_gradient_mpi_solver.cpp  test_conjugate_gradient_solver.cpp  test_hosvd.cpp  test_observable_matrix.cpp
tests/tools/: README.md  benchmark_ising_torus_trg_vs_tm.py  calculate_classical_potts_exact_energies.cpp  ctest_expect_mpi_abort.cmake  exact_2x2_obc_benchmarks.json  tJ_OBC.py  (+4 more)
(+920 files in other folders)
